# codegen-for-async-graphql

./: .gitignore  Cargo.toml  LICENSE  README.md  clippy.toml  docker-compose.yml
.github/workflows/: code_coverage.yml  rust.yml
codegen-for-async-graphql-derive/: Cargo.toml
codegen-for-async-graphql-derive/src/: lib.rs
codegen-for-async-graphql-example/: Cargo.toml  schema.graphql
codegen-for-async-graphql-example/src/: main.rs
codegen-for-async-graphql-example/src/models/: create_friend_mutation_input.rs  create_friend_mutation_payload.rs  friend.rs  friend_connection.rs  me.rs  mod.rs  mutation.rs  notification.rs  query.rs  root.rs  search_result.rs  user.rs
codegen-for-async-graphql-example/src/models/interface_type/: mod.rs  user.rs
codegen-for-async-graphql-example/src/models/mutations_type/: mutation.rs
codegen-for-async-graphql-example/src/models/object_type/: create_friend_mutation_payload.rs  friend_connection.rs  me.rs  query.rs
codegen-for-async-graphql-example/src/models/scalar_type/: mod.rs  url.rs
codegen-for-async-graphql-example/src/models/subscription_type/: subscription.rs
codegen-for-async-graphql-example/tests/snapshots/: introspection.json  main.json
codegen-for-async-graphql-renderer/: Cargo.toml
codegen-for-async-graphql-renderer/src/: lib.rs
codegen-for-async-graphql-renderer/src/base/: context.rs  generator.rs
codegen-for-async-graphql-renderer/src/document_wrapper/: field_wrapper.rs  input_object_type_wrapper.rs  input_value_wrapper.rs  mod.rs  mutation_type_wrapper.rs  mutations_type_wrapper.rs  scalar_type_wrapper.rs  subscription_root_type_wrapper.rs  subscription_type_wrapper.rs  type_wrapper.rs  union_type_wrapper.rs
codegen-for-async-graphql-renderer/src/renderer/: mod.rs  save.rs
codegen-for-async-graphql-renderer/src/renderer/input_object/: renderer.rs
codegen-for-async-graphql-renderer/src/renderer/interface/: mod.rs
codegen-for-async-graphql-renderer/src/renderer/internal/: field.rs  mod.rs
codegen-for-async-graphql-renderer/src/renderer/mod_file/: sub_module_renderer.rs
codegen-for-async-graphql-renderer/src/renderer/mutation/: mod.rs  renderer.rs
codegen-for-async-graphql-renderer/src/renderer/scalar/: mod.rs
codegen-for-async-graphql-renderer/src/renderer/subscription/: mod.rs  renderer.rs
codegen-for-async-graphql-template/: Cargo.toml
codegen-for-async-graphql-template/src/: lib.rs  parser.rs
codegen-for-async-graphql-template/src/base/: building_status.rs  config.rs  context.rs  definition_matcher.rs  field.rs  generator.rs  mod.rs  render_input_value_type.rs  render_type.rs  renderer_field_type.rs  renderer_input_object_type.rs  renderer_interface_type.rs  renderer_mutation_type.rs  renderer_mutations_type.rs  renderer_object_type.rs  renderer_scalar_type.rs  utils.rs
codegen-for-async-graphql-template/src/boot/: mod.rs
codegen-for-async-graphql-template/src/document_wrapper/: field_wrapper.rs  input_object_type_wrapper.rs  interface_type_wrapper.rs  mod.rs  mutations_type_wrapper.rs  object_type_wrapper.rs  scalar_type_wrapper.rs  type_wrapper.rs  union_type_wrapper.rs
codegen-for-async-graphql-template/src/parser/: mod.rs
codegen-for-async-graphql-template/src/renderer/: mod.rs  mod_file.rs  output.rs  save.rs
codegen-for-async-graphql-template/src/renderer/input_object/: mod.rs  renderer.rs
codegen-for-async-graphql-template/src/renderer/interface/: renderer.rs
codegen-for-async-graphql-template/src/renderer/internal/: dependencies.rs  field.rs  mod.rs
codegen-for-async-graphql-template/src/renderer/mod_file/: mod.rs  root_module_renderer.rs
codegen-for-async-graphql-template/src/renderer/mutation/: renderer.rs
codegen-for-async-graphql-template/src/renderer/object_type/: mod.rs  renderer.rs
codegen-for-async-graphql-template/src/renderer/scalar/: renderer.rs
codegen-for-async-graphql-template/src/renderer/union_type/: mod.rs  renderer.rs
codegen-for-async-graphql-template/src/template/: field.rs  mod.rs  mod_file.rs  object_type.rs  save.rs  utils.rs
codegen-for-async-graphql-template/src/template/input_object/: extension.rs  mod.rs
codegen-for-async-graphql-template/src/template/interface/: extension.rs  mod.rs
codegen-for-async-graphql-template/src/template/mutation/: extension.rs  mod.rs
codegen-for-async-graphql-template/src/template/object_type/: extension.rs  field.rs  mod.rs
codegen-for-async-graphql-template/src/template/scalar/: extension.rs  mod.rs
examples/codegen-for-async-graphql-example/: Cargo.toml
examples/codegen-for-async-graphql-example/src/: main.rs
examples/codegen-for-async-graphql-example/src/models/input_object_type/: create_friend_mutation_input.rs  mod.rs
examples/codegen-for-async-graphql-example/src/models/mutations_type/: mod.rs  mutation.rs
examples/codegen-for-async-graphql-example/src/models/object_type/: create_friend_mutation_payload.rs  friend_connection.rs  mod.rs  notification.rs  query.rs
examples/codegen-for-async-graphql-example/src/models/subscription_type/: mod.rs
examples/codegen-for-async-graphql-example/src/models/union_type/: mod.rs  search_result.rs
examples/codegen-for-async-graphql-example/tests/snapshots/: main.json
src/: codegen.rs  main.rs
src/boot/: mod.rs
src/models/: me.rs  mod.rs  root.rs
src/template/: mod.rs  object_type.rs  save.rs
tests/: query.graphql
tests/queries/: introspection.graphql
tests/schemas/: README.md  kitchen-sink.graphql.graphql  query.graphql  schema.graphql  schema.json
