[package]
name = "codegen-for-async-graphql"
version = "0.1.0"
authors = ["Atsuhiro Takahashi <fxyoxbjis@gmail.com>"]
edition = "2018"

[[bin]]
name = "codegen"
path = "src/codegen.rs"

[[bin]]
name = "coderun"
path = "src/coderun.rs"

[dependencies]
codegen-for-async-graphql-derive = { path = "codegen-for-async-graphql-derive" }
codegen-for-async-graphql-template = { path = "codegen-for-async-graphql-template" }
async-graphql = "1.15.14"
async-graphql-parser = "1.14.2"
proc-macro2 = { version = "1.0", default-features = false }
quote = "1.0.7"
toolchain_find = "0.1"

[workspace]
members = [
    "codegen-for-async-graphql-derive",
    "codegen-for-async-graphql-example",
    "codegen-for-async-graphql-template",
]
