[package]
name = "codegen-for-async-graphql"
version = "0.1.0"
authors = ["Atsuhiro Takahashi <fxyoxbjis@gmail.com>"]
edition = "2018"
description = "Internal code generation crate for async-graphql"
publish = true
homepage = "https://github.com/atsuhiro/codegen-for-async-graphql"
repository = "https://github.com/atsuhiro/codegen-for-async-graphql"
keywords = ["graphql", "async-graphql"]
categories = ["network-programming", "web-programming"]
readme = "README.md"

[[bin]]
name = "cargo-codegen-for-async-graphql"
path = "src/codegen.rs"

[dependencies]
codegen-for-async-graphql-renderer= { path = "codegen-for-async-graphql-renderer", version = "0.1.0" }

[workspace]
members = [
    "codegen-for-async-graphql-example",
    "codegen-for-async-graphql-renderer",
]
