[package]
name = "codegen-for-async-graphql-derive"
version = "0.1.0"
authors = ["Atsuhiro Takahashi <fxyoxbjis@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
codegen-for-async-graphql-template = { path = "../codegen-for-async-graphql-template" }
async-graphql = "1.15.14"
async-graphql-parser = "1.14.2"
proc-macro2 = "1.0.6"
syn = { version = "1.0.20", features = ["full", "extra-traits"] }
quote = "1.0.3"
Inflector = "0.11.4"
proc-macro-crate = "0.1.4"
itertools = "0.9.0"
