[package]
name = "codegen-for-async-graphql-example"
version = "0.1.0"
authors = ["Atsuhiro Takahashi <fxyoxbjis@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codegen-for-async-graphql-derive = { path = "../codegen-for-async-graphql-derive" }
async-graphql = "1.15.14"
async-std = { version = "1.5.0", features = ["attributes"] }
