[package]
name = "codegen-for-async-graphql-example"
version = "0.2.0"
authors = ["Atsuhiro Takahashi <fxyoxbjis@gmail.com>"]
edition = "2018"
publish = false
homepage = "https://github.com/atsuhiro/codegen-for-async-graphql"
repository = "https://github.com/atsuhiro/codegen-for-async-graphql"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = "1.15.14"
async-std = { version = "1.5.0", features = ["attributes"] }
