[package]
name = "codegen-for-async-graphql-template"
version = "0.1.0"
authors = ["Atsuhiro Takahashi <fxyoxbjis@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = "1.15.14"
async-graphql-parser = "1.14.2"
proc-macro2 = { version = "1.0", default-features = false }
quote = "1.0.7"
toolchain_find = "0.1"
